@@ -206,7 +206,7 @@ BEGIN
     DEFPUSHBUTTON   "&OK",IDOK,243,224,50,14
 END
 
-IDD_LOGPROMPT DIALOGEX 0, 0, 300, 252
+IDD_LOGPROMPT DIALOGEX 0, 0, 300, 275
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU | 
     WS_THICKFRAME
 CAPTION "Enter Log Message"
@@ -219,11 +219,13 @@ BEGIN
                     LVS_SINGLESEL | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,6,
                     93,287,109
     LTEXT           "To see the changes you made, double click on the files above.",
-                    IDC_HINTLABEL,6,209,287,20
-    DEFPUSHBUTTON   "&OK",IDOK,186,231,50,14
-    PUSHBUTTON      "&Cancel",IDCANCEL,243,231,50,14
+                    IDC_HINTLABEL,6,230,287,20
+    DEFPUSHBUTTON   "&OK",IDOK,186,254,50,14
+    PUSHBUTTON      "&Cancel",IDCANCEL,243,254,50,14
     EDITTEXT        IDC_COMMIT_TO,6,17,287,12,ES_AUTOHSCROLL | ES_READONLY | 
                     NOT WS_BORDER
+    CONTROL         "Select / Deselect &All",IDC_SELECTALL,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,6,209,287,10
 END
 
 IDD_MERGE DIALOGEX 0, 0, 300, 163
@@ -598,7 +600,7 @@ BEGIN
         RIGHTMARGIN, 293
         VERTGUIDE, 236
         TOPMARGIN, 7
-        BOTTOMMARGIN, 245
+        BOTTOMMARGIN, 268
     END
 
     IDD_MERGE, DIALOG
