@@ -7,7 +7,9 @@
        working copy. (Stefan)
 - ADD: New command to apply patchfiles in
        unified diff format to a working
-       copy. (Stefan)       
+       copy. (Stefan)
+- ADD: New checkbox to select/deselect all entries
+       in the commit dialog. (Stefan)
 - CHG: The settings dialog got a facelift. (Stefan)
 - CHG: The layout in our installation folder
        is more organized. (Stefan)
